--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Plant</title>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-  
+<nav>
+   <div id="top" class="navbar bg-[#15803D] text-white shadow-sm">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+          </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-black rounded-box z-1 mt-3 w-52 p-2 shadow">
+            <li><a>About</a></li>
+            <li><a href="">Gallery</a> </li>
+            <li><a>Plant A Tree</a></li>
+          </ul>
+        </div>
+        <a class="btn btn-ghost text-xl">🌱 Green Earth</a>
+      </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a href="#about">About</a></li>
+            <li><a href="#gallery">Gallery</a> </li>
+            <li><a href="#plant">Plant A Tree</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <button class="bg-[#FACC15] py-1 px-3 rounded-xl"><a href="#plant"></a>Plant A Tree</button>
+        </div>
+      </div>
+</nav>
 </body>
 </html>
