--- a/index.html
+++ b/index.html
@@ -37,5 +37,29 @@
         </div>
       </div>
 </nav>
+<header class="relative w-full bg-[#95deb2] min-h-76 md:min-h-76 flex items-center justify-center px-4 sm:px-6 md:px-10 overflow-hidden">
+  <!-- Left leaf -->
+  <img src="./assets/hero-leaf1.png" alt=""
+       class="absolute -left-10 top-0 bottom-0 h-40 sm:block hidden lg:h-76 z-0">
+
+  <!-- Right leaf -->
+  <img src="./assets/hero-leaf2.png" alt=""
+       class="absolute -right-10 top-0 bottom-0 h-40 sm:block hidden lg:h-76 z-0">
+
+  <!-- Content -->
+  <div class="z-10 text-center flex flex-col justify-center items-center px-4 sm:px-6 md:px-10">
+    <h1 class="mb-2 mt-0 text-3xl sm:text-4xl md:text-5xl font-bold leading-tight">
+      Plant a Tree, Grow a Future
+    </h1>
+    <p class="mb-8 text-sm sm:text-base md:text-lg text-[#1F2937] max-w-2xl">
+      Join our mission to plant 1 million trees and make the Earth greener for
+      <br class="hidden sm:block">
+      future generations.
+    </p>
+    <button class="bg-[#FACC15] py-2 px-6 rounded-xl text-green-700 font-semibold hover:bg-yellow-400 transition">
+      Get Involved
+    </button>
+  </div>
+</header>
 </body>
 </html>
