--- a/index.html
+++ b/index.html
@@ -94,5 +94,32 @@
     </div>
   </div>
 </section>
+
+<!-- about section -->
+ <section id="about" class="w-full bg-[#CFF0DC] py-12 px-4 md:px-8 lg:px-16 xl:px-32">
+  <div class="max-w-7xl mx-auto">
+    <h2 class="text-4xl font-bold text-center mb-12 text-black opacity-80">About The Campaign</h2>
+    <div class="flex flex-col lg:flex-row items-center lg:space-x-12">
+      <div class="lg:w-1/2 mb-8 lg:mb-0">
+        <img src="./assets/about.png" alt="A vibrant green plant with leaves" class="w-full h-auto rounded-lg shadow-lg" />
+      </div>
+      <div class="lg:w-1/2 text-center lg:text-left">
+        <p class="text-lg text-gray-700 leading-relaxed mb-6">
+          <span class="font-semibold text-black">Green Earth</span> is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.
+        </p>
+        <div class="text-lg text-gray-700">
+          <p class="font-semibold mb-2">Our impact includes:</p>
+          <ul class="list-disc list-inside space-y-2">
+            <li>Restoration of natural habitats</li>
+            <li>Improvement of air quality</li>
+            <li>Support for local communities</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 </body>
 </html>
