--- a/index.html
+++ b/index.html
@@ -120,6 +120,71 @@
   </div>
 </section>
 
+<!-- impact section -->
+<section class="bg-[#95deb2] py-16">
+  <div class="container mx-auto px-8">
+    <h2 class="text-4xl font-bold text-center mb-12 opacity-80">Our Impact</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="card shadow-xl bg-white p-6 text-center">
+        <h3 class="text-5xl font-bold text-green-600">1.2M+</h3>
+        <p class="text-gray-600 mt-2">Trees Planted</p>
+      </div>
+      <div class="card shadow-xl bg-white p-6 text-center">
+        <h3 class="text-5xl font-bold text-green-600">120+</h3>
+        <p class="text-gray-600 mt-2">Communities Involved</p>
+      </div>
+      <div class="card shadow-xl bg-white p-6 text-center">
+        <h3 class="text-5xl font-bold text-green-600">30K+</h3>
+        <p class="text-gray-600 mt-2">Countried Reached</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- plant section -->
+ <section id="plant" class="bg-[#166534] py-16">
+    <div class="container mx-auto px-6 md:px-8">
+    <!-- Heading -->
+    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">
+      Plant a Tree Today
+    </h2>
+
+    <!-- Form Box -->
+    <div class="max-w-lg mx-auto p-8 bg-[#15802D] rounded-lg shadow-xl">
+      <form id="plant-form" class="space-y-5">
+        <!-- Name -->
+        <div class="form-control">
+          <input type="text" placeholder="Your Name"
+                 class="input input-bordered w-full" required>
+        </div>
+        <!-- Email -->
+        <div class="form-control">
+          <input type="email" placeholder="Your Email Address"
+                 class="input input-bordered w-full" required>
+        </div>
+        <!-- Number of Trees -->
+        <div class="form-control">
+          <select class="select select-bordered w-full" required>
+            <option value="" disabled selected>Select Number of Trees</option>
+            <option value="1">1 Tree</option>
+            <option value="5">5 Trees</option>
+            <option value="10">10 Trees</option>
+            <option value="20">20 Trees</option>
+            <option value="50">50 Trees</option>
+            <option value="100">100 Trees</option>
+          </select>
+        </div>
+        <!-- Submit -->
+        <div class="form-control mt-6">
+          <button type="submit"
+                  class="w-full bg-[#FACC15] text-green-700 font-semibold py-3 rounded-lg shadow-md hover:bg-yellow-400 transition">
+            Donate Now
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
