added modal and footer section

--- a/index.html
+++ b/index.html
@@ -186,5 +186,21 @@
   </div>
 </section>
 
+<!-- modal -->
+<dialog id="details" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+  </div>
+</dialog>
+
+   <!-- footer -->
+<footer class="footer footer-center p-4 bg-[#14532D] text-white">
+  <aside class="flex gap-12">
+    <p>Copyright © 2025 - GREEN EARTH. All right reserved.</p>
+    <button><a href="#top">🔼</a></button>
+  </aside>
+</footer>
+
+
+
 </body>
 </html>
