--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <nav>
    <div id="top" class="navbar bg-[#15803D] text-white shadow-sm">
-      <div class="navbar-start">
+      <div class="navbar-start ml-4">
         <div class="dropdown">
           <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
@@ -23,7 +23,7 @@
             <li><a>Plant A Tree</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost text-xl">🌱 Green Earth</a>
+        <a class="text-xl font-bold">🌱 Green Earth</a>
       </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -201,6 +201,6 @@
 </footer>
 
 
-
+<script src="./script.js"></script>
 </body>
 </html>
