--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Green Plant</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
+  </style>
 </head>
 <body>
 <nav>
@@ -33,7 +39,7 @@
           </ul>
         </div>
         <div class="navbar-end">
-          <button class="bg-[#FACC15] py-1 px-3 rounded-xl"><a href="#plant"></a>Plant A Tree</button>
+          <button class="bg-[#FACC15] hover:bg-yellow-600 py-1 px-3 rounded-xl cursor-pointer"><a href="#plant">Plant A Tree</a></button>
         </div>
       </div>
 </nav>
@@ -48,7 +54,7 @@
 
   <!-- Content -->
   <div class="z-10 text-center flex flex-col justify-center items-center px-4 sm:px-6 md:px-10">
-    <h1 class="mb-2 mt-0 text-3xl sm:text-4xl md:text-5xl font-bold leading-tight">
+    <h1 class="mb-2 mt-0 text-2xl sm:text-3xl md:text-4xl font-bold leading-tight">
       Plant a Tree, Grow a Future
     </h1>
     <p class="mb-8 text-sm sm:text-base md:text-lg text-[#1F2937] max-w-2xl">
@@ -56,7 +62,7 @@
       <br class="hidden sm:block">
       future generations.
     </p>
-    <button class="bg-[#FACC15] py-2 px-6 rounded-xl text-green-700 font-semibold hover:bg-yellow-400 transition">
+    <button class="bg-[#FACC15] py-2 px-6 rounded-xl text-green-700 font-semibold hover:bg-yellow-600 cursor-pointer transition">
       Get Involved
     </button>
   </div>
